* fix  z-index

--- a/css/circlesectionlabel.css
+++ b/css/circlesectionlabel.css
@@ -5,21 +5,25 @@
 }
 
 .as-circle-section-label-text {
+    position: relative;
     display: inline-block;
     vertical-align: middle;
     font-size: 1em;
     padding-right: 2.5em;
     color: white;
     font-weight: bold;
+    z-index: 2;
 }
 
 
 .as-circle-section-label-index {
+    position: relative;
     display: inline-block;
     vertical-align: middle;
     text-align: center;
     color: rgb(30, 162, 245);
     font-weight: 900;
+    z-index: 2;
 }
 
 .as-circle-section-label-background {
@@ -27,7 +31,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 .as-circle-section-label-background>svg {
